--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
 		on-response="onResultResponse"
 		debounce-duration="1000"
 		content-type="application/json"
+		with-credentials="true"
 		>
 	</iron-ajax>
 
@@ -61,6 +62,7 @@
 		on-response="onChallengeResponse"
 		debounce-duration="1000"
 		content-type="application/json"
+		with-credentials="true"
 		>
 	</iron-ajax>
 
