--- a/app/elements/code-editor/consoles/test-stats-console.html
+++ b/app/elements/code-editor/consoles/test-stats-console.html
@@ -19,7 +19,8 @@
 		handle-as="json"
 		on-response="onTestsResponse"
 		on-error="onTestsError"
-		content-type="application/json"
+		method="GET"
+		with-credentials="true"
 		>
 	</iron-ajax>
 		<div id="consoleWrapper">
@@ -57,7 +58,8 @@
 				'_afterPropertiesSet(task)'
 			],
 			_afterPropertiesSet: function(){
-				util.get(this.$.getTestsRequest, '/tasks/' + this.task.Key + '/tests');
+				this.$.getTestsRequest.url = util.build('/tasks/' + this.task.Key + '/tests');
+				this.$.getTestsRequest.generateRequest();
 			},
 			setOutput: function(data){
 				console.log(data);
