--- a/app/elements/services/user-service.html
+++ b/app/elements/services/user-service.html
@@ -11,7 +11,10 @@
 			id="postUser"
 			handle-as="json"
 			last-response="{{user}}"
-			on-error="_onError">
+			on-error="_onError"
+			method="GET"
+			with-credentials="true"
+			content-type="application/json">
 		</iron-ajax>
 	</template>
 	<script>
@@ -25,7 +28,9 @@
 				}
 			},
 			save: function(user){
-				util.post(this.$.postUser, '/users', user);
+				this.$.postUser.body = user;
+				this.$.postUser = util.build('/users');
+				this.$.postUser.generateRequest();
 			},
 			_onError: function(err){
 				util.error(err);
