Set filename to that of the template retrieved from gcs

--- a/app/elements/submission/tasks/general-code-task.html
+++ b/app/elements/submission/tasks/general-code-task.html
@@ -154,16 +154,14 @@
 					}
 					this.push('languages', lang);
 				}
-				this.$.codeEditor.setMode(this.languages[0].tag);
 				this.getTemplate(this.languages[0].tag);
-
 			},
 			languageChanged: function(){
 				var languageTag = this.$.languageSelector.getSelectedLanguage().tag;
-				this.$.codeEditor.setMode(languageTag);
 				this.getTemplate(languageTag);
 			},
 			getTemplate: function(language){
+				this.$.codeEditor.setMode(language);
 				util.get(this.$.getTemplatesAjax,'/tasks/' + this.task.Key + '/templates?language=' + language);
 			},
 			onTemplatesResponse: function(request){
@@ -180,6 +178,11 @@
 				var that = this;
 				var xhr = new XMLHttpRequest();
 				xhr.onload = function() {
+					var contentDisposition = xhr.getResponseHeader('Content-Disposition');
+					if (contentDisposition != null){
+						var fn = contentDisposition.match(/filename[^;=\n]*=((['"]).*?\2|[^;\n]*)/);
+						that.$.codeEditor.setFilename(fn !== null ? fn[1].replace(/"/g,'') : null);
+					}
 					that.$.codeEditor.setText(xhr.responseText);
 				};
 				xhr.open('GET', url);
